--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-  "deno.enable": true,
-  "deno.lint": true
+    "deno.enable": true,
+    "deno.lint": true,
+    "deno.config": "./deno.json"
 }
