--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,7 @@
 {
+    "imports": {
+        "std/": "https://deno.land/std@0.200.0/"
+    },
     "tasks": {
         "build": "deno bundle server.ts dest/server.js && docker build -t gcr.io/seventh-azimuth-346103/mail:latest .",
         "push": "docker push gcr.io/seventh-azimuth-346103/mail"
