--- a/deno.json
+++ b/deno.json
@@ -1,11 +1,6 @@
 {
     "lock": false,
-    "imports": {
-        "std/": "https://deno.land/std@0.208.0/"
-    },
     "tasks": {
-        "start": "PORT=8090 deno run -A server.ts",
-        "build": "deno bundle server.ts dest/server.js && docker build -t gcr.io/seventh-azimuth-346103/mail:latest .",
-        "push": "docker push gcr.io/seventh-azimuth-346103/mail"
+        "start": "PORT=8090 deno run -A server.ts"
     }
 }
