--- a/deno.json
+++ b/deno.json
@@ -5,6 +5,7 @@
         "generic-ts/": "https://raw.githubusercontent.com/sholvoir/generic-ts/main/"
     },
     "tasks": {
-        "start": "PORT=8090 deno run -A --env server.ts"
+        "start": "PORT=8090 deno run -A --env server.ts",
+        "deploy": "deno run -A deploy.ts"
     }
 }
