--- a/deno.json
+++ b/deno.json
@@ -1,11 +1,16 @@
 {
+    "name": "@sholvoir/deno-smtp",
+    "version": "0.9.6",
     "lock": false,
     "imports": {
-        "$std/": "https://deno.land/std@0.209.0/",
         "generic-ts/": "https://raw.githubusercontent.com/sholvoir/generic-ts/main/"
     },
     "tasks": {
         "start": "PORT=8090 deno run -A --env server.ts",
         "deploy": "deno run -A deploy.ts"
+    },
+    "exports": {
+        "./smtp": "./smtp.ts",
+        "./server": "./server.ts"
     }
 }
